# ChangeLog for net-dialup/ppp
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.155 2006/09/04 05:43:35 kumba Exp $

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> ppp-2.4.3-r16.ebuild:
  Marked stable on mips.

  30 Aug 2006; Michael Hanselmann <hansmi@gentoo.org> ppp-2.4.3-r16.ebuild:
  Stable on ppc.

*ppp-2.4.4-r1 (28 Aug 2006)

  28 Aug 2006; Alin Nastac <mrness@gentoo.org> metadata.xml,
  +ppp-2.4.4-r1.ebuild:
  Take maintainership of this package. Extend limit of maxoctets parameter
  to UINT_MAX, thanks to Serhij S. Stasyuk <stas@onlineua.net> (#145313).

*ppp-2.4.4 (22 Aug 2006)

  22 Aug 2006; Alin Nastac <mrness@gentoo.org> +ppp-2.4.4.ebuild:
  Version bump (#144690).

  16 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org> ppp-2.4.3-r16.ebuild:
  Stable on sparc

  16 Aug 2006; Markus Rothe <corsair@gentoo.org> ppp-2.4.3-r16.ebuild:
  Stable on ppc64

  14 Aug 2006; Alin Nastac <mrness@gentoo.org> -ppp-2.4.3-r15.ebuild,
  ppp-2.4.3-r16.ebuild:
  Stable on amd64 and x86.

*ppp-2.4.3-r16 (07 Jul 2006)

  07 Jul 2006; Alin Nastac <mrness@gentoo.org> +ppp-2.4.3-r16.ebuild:
  Fix local privilege escaladation (#139477).

  13 Jun 2006; <uberlord@gentoo.org> ppp-2.4.2-r15.ebuild,
  ppp-2.4.3-r15.ebuild:
  Change update-modules to modules-update.

  23 May 2006; Alin Nastac <mrness@gentoo.org> -ppp-2.4.3-r14.ebuild,
  ppp-2.4.3-r15.ebuild:
  Remove old test version. Take advantage of the new features implemented in
  linux-info.eclass (#133026).

  16 May 2006; Alin Nastac <mrness@gentoo.org> ppp-2.4.2-r15.ebuild:
  Fix recursive definitions of COPTS make variable (#133309).

  15 May 2006; Alin Nastac <mrness@gentoo.org> ppp-2.4.2-r15.ebuild:
  Fix build error on systems where libcrypt is not installed in /usr/lib
  (#133309).

*ppp-2.4.3-r15 (07 May 2006)

  07 May 2006; Alin Nastac <mrness@gentoo.org> -ppp-2.4.2-r10.ebuild,
  +ppp-2.4.3-r15.ebuild: