@@ -1,6 +1,6 @@
-MD5 fa95166a95283db0909e80111017bb7f ppp-2.4.3-patches-20060707.tar.gz 56533
-RMD160 8f1d1fc00cb304b9cadbd0a17234c7456d67f919 ppp-2.4.3-patches-20060707.tar.gz 56533
-SHA256 80f45fa9268eec6361600cec32a647d2e89ff12b230f6b384dca09a1cc9ab9bb ppp-2.4.3-patches-20060707.tar.gz 56533
+MD5 819e8a92f597aafbdb88027789a6f097 ppp-2.4.3-patches-20060910.tar.gz 56471
+RMD160 160ebf1425fc338907d51e4b601e3dbd9bcad148 ppp-2.4.3-patches-20060910.tar.gz 56471
+SHA256 a4d23bb0026d7b1f9d7a5c97706afe83775504a49d8aa3b55ab247abb78eeeb1 ppp-2.4.3-patches-20060910.tar.gz 56471
 MD5 848f6c3cafeb6074ffeb293c3af79b7c ppp-2.4.3.tar.gz 688092
 RMD160 845821496bacb07d93bb7572a171854853ef722b ppp-2.4.3.tar.gz 688092
 SHA256 1e0fddb5f53613dd14ab10b25435e88092fed1eff09b4ac4448d5be01f3b0b11 ppp-2.4.3.tar.gz 688092
