@@ -1,6 +1,6 @@
-MD5 600c67d0032bc09e928e817f3bbcb753 ppp-2.4.4-patches-20060828.tar.gz 42278
-RMD160 d348fc76f203acae7cfe0e7a8a4a877b4a9c6504 ppp-2.4.4-patches-20060828.tar.gz 42278
-SHA256 783321d62e677c973fc22edcb31d20c7157bec183d0e6fa5c4a0160974befe62 ppp-2.4.4-patches-20060828.tar.gz 42278
+MD5 4c8d99db0b6fa1cdeb7fbbeae10a83fc ppp-2.4.4-patches-20060910.tar.gz 42282
+RMD160 89bc9d4be5d62ffbc9683e4167f3d1ed54893d60 ppp-2.4.4-patches-20060910.tar.gz 42282
+SHA256 e55b58332d8f37837dd18a52077274afa136d35699e3820f5658557a9c71a39c ppp-2.4.4-patches-20060910.tar.gz 42282
 MD5 183800762e266132218b204dfb428d29 ppp-2.4.4.tar.gz 688763
 RMD160 ed289a4506c3af41a72f88103d5e0be44dec3da7 ppp-2.4.4.tar.gz 688763
 SHA256 58af45fc07e5f326eea2408df770ea40e4626d1a15e7d564dd054d74880e91ea ppp-2.4.4.tar.gz 688763
