@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/ppp
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.155 2006/09/04 05:43:35 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.156 2006/09/10 10:38:21 mrness Exp $
+
+  10 Sep 2006; Alin Nastac <mrness@gentoo.org> ppp-2.4.3-r16.ebuild,
+  -ppp-2.4.4.ebuild, ppp-2.4.4-r1.ebuild:
+  Fix broken build against openssl-0.9.8 (#146780).
 
   04 Sep 2006; Joshua Kinard <kumba@gentoo.org> ppp-2.4.3-r16.ebuild:
   Marked stable on mips.
